# backend/routes/recipesRouter.js
@@ -10,10 +10,12 @@ import {
   removeFavorite,
   listFavorites,
   getFavoriteStatus,
+  uploadRecipeImage,
 } from "../controllers/recipesControllers.js";
 import { createRecipeSchema, updateRecipeSchema } from "../schemas/recipeSchemas.js";
 import { validateBody } from "../helpers/validateBody.js";
 import authenticate from "../middleware/authenticate.js";
+import upload from "../config/multerConfig.js";
 
 const recipesRouter = new Router();
 
@@ -23,6 +25,7 @@ recipesRouter.get("/favorites", authenticate, listFavorites);
 recipesRouter.get("/:id/favorite", authenticate, getFavoriteStatus);
 recipesRouter.get("/:id", getRecipeById);
 recipesRouter.post("/", authenticate, validateBody(createRecipeSchema), createRecipe);
+recipesRouter.post("/upload/image", authenticate, upload.single("image"), uploadRecipeImage);
 recipesRouter.put("/:id", authenticate, validateBody(updateRecipeSchema), updateRecipe);
 recipesRouter.delete("/:id", authenticate, deleteRecipe);
 recipesRouter.post("/:id/favorite", authenticate, addFavorite);
